# Playwright-Automation-Suite

./: .env.example  .gitignore  .replit  Dockerfile.api  Dockerfile.load  Dockerfile.mobile  Dockerfile.ui  Makefile  README.md  docker-compose.mobile.yml  docker-compose.yml  pnpm-lock.yaml  pyproject.toml  replit.md  replit.nix
.github/workflows/: ci.yml
artifacts/api-server/: Dockerfile
tests/: README.md
tests/api/: .gitignore  README.md  conftest.py  pytest.ini  requirements-api.txt
tests/api/models/: responses.py
tests/api/tests/: test_auth.py  test_health.py  test_products.py  test_users.py
tests/api/utils/: data_factory.py  retry.py  validators.py
tests/load/: README.md  locust.conf  locustfile.py  run_smoke.sh  run_soak.sh  run_spike.sh  run_stress.sh
tests/load/config/: __init__.py  load_profiles.py
tests/load/scripts/: check_p99_threshold.py
tests/load/utils/: __init__.py  auth_helper.py
tests/mobile/: README.md  conftest.py  pytest.ini  requirements-mobile.txt
tests/mobile/caps/: android_caps.yaml  ios_caps.yaml
tests/mobile/pages/: __init__.py  base_page.py  home_page.py  login_page.py  product_detail_page.py  product_list_page.py
tests/mobile/tests/: test_login.py  test_navigation.py  test_product_browse.py
tests/mobile/utils/: __init__.py  driver_factory.py  wait_helpers.py
tests/ui/: README.md  conftest.py  pyproject.toml  pytest.ini  requirements-ui.txt
tests/ui/pages/: base_page.py  cart_page.py  checkout_page.py  inventory_page.py  login_page.py  product_page.py
tests/ui/tests/: test_cart.py  test_checkout.py  (+2 more)
(+14 files in other folders)
